templates/ldap_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ldap-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ldap-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ldap-network: "true"
