templates/rocket_database_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rocket-database-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/rocket-database-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rocket-database-network: "true"
