templates/service_network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: service-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/service-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/service-network: "true"
